# CANbus-project

./: .gitignore  README.txt  project.toml  pyproject.toml  requirements.txt
data/: can_dump_1000_line_sample.pcapng  can_dump_1000_line_sample_konversio.tsv
docs/: dekooderin_kuvaus.txt  loppuraportti.txt  mermaid-diagram-2025-01-21-085449.mmd  mermaid_ohje.txt  sekalaisia_ajatuksia_loppuraporttiin.txt  sekvenssikaavio.txt  tshark_conversion_windows.txt  tshark_konversio_ohje_windows.txt
src/: decoder.py  diffpriv.py  main.py  pipeline.sh  raakadata_konversio.sh  visualizer.py  vss.py
src/CANBus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/canbusdecoder/: __main__.py  decoder.py  diffpriv.py  stats.py  test_code.py
src/python/: decode.py  diffpriv.py  main.py
tests/: testinput_10_lines.tsv  unit_test.py
