[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canbusdecoder"
version = "0.1.0"
description = "A python tool for analysing vehicle CAN data"
dependencies = ["cantools", "diffprivlib"]

[project.scripts]
canbusdecoder = "canbusdecoder.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
